--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#" class="logo">Portfolio <i class='bx bx-desktop' style='color:#30a5a7'></i></a>
 
         <nav class="navbar">
-            <a href="#home" style="--i:1" class="active">Home</a>
+            <a href="#home" style="--i:1" class="active" >Home</a>
             <a href="#about" style="--i:2">About</a>
             <a href="#skills" style="--i:3">My Skills</a>
             <a href="#project" style="--i:4">Latest Projects</a>
@@ -51,7 +51,7 @@
             <img src="WhatsApp Image 2024-11-09 at 02.53.14_0966d1c7.png" alt="">
         </div>
         <div class="about-text">
-            <h2>About<span>Me</span></h2>
+            <h2>About <span>Me</span></h2>
             <h4>Full Stack Developer!</h4>
             <p>As a BE- CSE student with knowledge of CSS, HTML, JavaScript, and C++ is proficient in both web
                 development and core programming. I can create well-structured and styled web pages, add interactive
@@ -146,7 +146,7 @@
                         <span>C++</span>
                     </div>
                     <div class="progress-line c-plus-plus">
-                        <span></span>
+                        <span> </span>
                     </div>
                 </div>
             </div>
@@ -157,7 +157,7 @@
     <section>
         <div id="porotfolio" id="project">
             <div class="main-text" id="project">
-                <h2>Latest<span>Project</span></h2>
+                <h2>Latest <span>Project</span></h2>
                 <br></br>
 
                 <div class="portfolio-content">
@@ -165,14 +165,8 @@
                         <img src="7e3aaade-4be8-47a8-aa6c-fe6f0c220316-cover.png">
                         <div class="layer">
                             <h5>UI/UX Design</h5>
-                            <p>This UI/UX development project focused on creating a seamless, engaging experience
-                                tailored to the users' needs and the client's goals. Starting with research and
-                                wireframing, the project involved iterative design and testing to refine every
-                                interaction. The final product is a visually appealing and user-friendly interface that
-                                not only meets user expectations but enhances accessibility and usability across
-                                devices.
-
-                                <b> Skills Applied</b>
+                            <p>
+                                <b> Skills Applied:- </b>
                                 User Research & Analysis ,
                                 Wireframing & Prototyping (Figma/Adobe XD),
                                 Interaction Design,
@@ -188,12 +182,8 @@
                         <img src="web-development1.jpg">
                         <div class="layer">
                             <h5>Web Deveeloment</h5>
-                            <p>This web development project showcases my expertise in creating a responsive, visually
-                                engaging website tailored to client needs. From conceptualization to deployment, the
-                                project emphasizes both design finesse and robust functionality. Key features include
-                                user-friendly navigation, optimized loading speed, and a seamless, adaptive layout that
-                                ensures an excellent experience on any device.
-                                <b> Skills Applied </b>
+                            <p>
+                                <b> Skills Applied:- </b>
                                 HTML/CSS/JavaScript,
                                 Responsive Design,
                                 Backend Development,
@@ -208,11 +198,10 @@
                         <img src="IMG_20241111_144910.png">
                         <div class="layer">
                             <h5>Face Recognition System</h5>
-                            <p>Face recognition is a powerful biometric tool that identifies or verifies a person from a
-                                digital image or video frame. It has gained significant attention in security,
-                                attendance systems, and human-computer interactions. In this project, we implement a
-                                face recognition system using Python, OpenCV, and cvzone, along with real-time data
-                                storage and management in Firebase.
+                            <p>
+                                In this project, we implement a face recognition system.
+                                <br> <b>Skilled Gained:-</b> </br>
+                                Python, OpenCV, and cvzone, along with real-time data storage and management in Firebase.
                             </p>
 
                             <a href="#"><i class='bx bx-link-external' style="color:aliceblue; "></i></a>
@@ -225,7 +214,7 @@
 
     <section class="contact" id="contact">
         <div class="contact-text">
-            <h2>Contact<span>Me</span></h2>
+            <h2>Contact <span>Me</span></h2>
             <h4>Let's work Together</h4>
             <p>I'm passionate about collaborating with clients to bring their visions to life through thoughtful design
                 and seamless functionality. Whether you need an engaging website, a user-centered app, or a reimagined
@@ -264,31 +253,6 @@
 
 
     <script src="main.js"></script>
-
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-analytics.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-            apiKey: "AIzaSyCgD1uha61fVdmCdN1ozRkYkBUSmnILhBc",
-            authDomain: "my-personal-portfolio-c74c4.firebaseapp.com",
-            projectId: "my-personal-portfolio-c74c4",
-            storageBucket: "my-personal-portfolio-c74c4.firebasestorage.app",
-            messagingSenderId: "795785773831",
-            appId: "1:795785773831:web:61d29370cb2efb3da4fba2",
-            measurementId: "G-F0H5Y236FL"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-    </script>
-
 
 </body>
 
